<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_list"
        android:title="@string/shoplist_delete_list" />
    <item
        android:id="@+id/clear_list"
        android:title="@string/shoplist_clear_list" />
    <item
        android:id="@+id/share_list"
        android:title="@string/shoplist_share_list" />
    <item
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_shop_item"
        app:actionLayout="@layout/edit_action_layout"
        android:title="@string/shoplist_button_save_item"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/save_item"
        android:icon="@drawable/ic_save"
        android:title="@string/shoplist_button_save_item"
        app:showAsAction="always" />


</menu>