<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notes"
        android:icon="@drawable/ic_note"
        android:title="@string/notes_action_bar_notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shopList"
        android:icon="@drawable/ic_list"
        android:title="@string/shoplist_action_bar_shoplist"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/newItem"-->
<!--        android:icon="@drawable/ic_new"-->
<!--        android:title="@string/title_new"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="ifRoom" />

</menu>